added google fonts links to html and font-family to essentials.css  header.css and layout.css

--- a/assets/css/essentials.css
+++ b/assets/css/essentials.css
@@ -73,6 +73,13 @@
 
  ** ************************************* **/
 
+/* essentials.css - font-famlily is placed on the essentials.css page b/c I want the font to be applied globally or to essential elements across the site. */
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
 /**	01. Resets
 *************************************************** **/
 button::-moz-focus-inner,
