--- a/assets/css/header-1.css
+++ b/assets/css/header-1.css
@@ -30,7 +30,7 @@
 	top: 50%;
 	right: 17px;
 	margin: -5px 0 0;
-	font-family: FontAwesome;
+	font-family: sans-serif;
 	font-size: 12px;
 	opacity: .3;
 	line-height: 1em;
@@ -101,3 +101,8 @@
 			border-top:rgba(0,0,0,0.1) 1px solid;
 		}
 }
+
+/* header.css - font-famlily is placed on the header.css page b/c I want the font to be applied specifically to the header elements. 
+body {
+    font-family: 'Roboto', sans-serif;
+} */
